--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,7 +4,8 @@ $breakpoints: (
 	'tablet': 768px,
 	'tablet_x': 860px,
 	'desktop': 1024px,
-	'widescreen': 1200px
+	'widescreen': 1200px,
+	'fullscreen': 1440px,
 );
 
 // keywords
