--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,1 +1,35 @@
-<footer id="footer"></footer>
+<footer id="footer">
+  <div class="container">
+    <div class="content">
+      <div class="footer_top">
+        <nav class="menu">
+          <ul class="menu_list">
+            <li class="menu_item">
+              <a class="menu_link" href="#">Collection</a>
+            </li>
+            <li class="menu_item">
+              <a class="menu_link" href="about_us.html">About Us</a>
+            </li>
+            <li class="menu_item"><a class="menu_link" href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+        <img
+          class="footer_img_desktop"
+          src="./images/footer_img.webp"
+          alt="iamge not found"
+        />
+        <img
+          class="footer_img_phone"
+          src="./images/footer_img_phone.webp"
+          alt="iamge not found"
+        />
+      </div>
+      <div class="footer_bot">
+        <p class="copyright">Copyright © 2024 All Rights Reserved</p>
+        <a target="_blank" href="https://improvs.com/" class="creator">
+          <img src="./images/creator.webp" alt="creator logo" />
+        </a>
+      </div>
+    </div>
+  </div>
+</footer>
