--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -1,1 +1,226 @@
-<header id="header"></header>
+<header id="header">
+  <div class="container">
+    <div class="content">
+      <a href="index.html" class="logo">
+        <img class="logo_img" src="./images/logo.webp" alt="logo">
+        <img class="logo_name" src="./images/logo_name.webp" alt="logo">
+      </a>
+      <div class="menu_wrap">
+        <nav class="menu" id="menu">
+          <ul class="menu_list">
+            <li class="menu_item">
+              <a class="menu_link" href="about_us.html">About Us</a>
+            </li>
+            <li class="menu_item modal_link">
+              <a class="menu_link link" href="#"
+                >Collection
+                <img class="arrow" src="./images/arrow.svg" alt="arrow" />
+              </a>
+              <div class="collection_list">
+                <div class="collection_title_wrap">
+                  <div class="line_box back_item">
+                    <img src="./images/arrow.svg" alt="arrow" />
+                  </div>
+                  <h2 class="collection_title">COLLECTIONS</h2>
+                </div>
+                <div class="collection_img">
+                  <img src="./images/header_img.webp" alt="image not found" />
+                </div>
+                <div class="list_wrap">
+                  <div class="list">
+                    <div class="list_item">
+                      <a href="#" class="title_wrap">
+                        <h3 class="item_title">All Products</h3>
+                        <div class="line_box">
+                          <img src="./images/arrow.svg" alt="arrow" />
+                        </div>
+                      </a>
+                    </div>
+                    <div class="list_item">
+                      <a href="#" class="title_wrap">
+                        <h3 class="item_title">Water</h3>
+                        <div class="line_box">
+                          <img src="./images/arrow.svg" alt="arrow" />
+                        </div>
+                      </a>
+                    </div>
+                    <div class="list_item">
+                      <a href="#" class="title_wrap">
+                        <h3 class="item_title">Geometry</h3>
+                        <div class="line_box">
+                          <img src="./images/arrow.svg" alt="arrow" />
+                        </div>
+                      </a>
+                    </div>
+                    <div class="list_item">
+                      <a href="#" class="title_wrap">
+                        <h3 class="item_title">Animal World</h3>
+                        <div class="line_box">
+                          <img src="./images/arrow.svg" alt="arrow" />
+                        </div>
+                      </a>
+                    </div>
+                    <div class="list_item">
+                      <a href="#" class="title_wrap">
+                        <h3 class="item_title">Geometry</h3>
+                        <div class="line_box">
+                          <img src="./images/arrow.svg" alt="arrow" />
+                        </div>
+                      </a>
+                    </div>
+                    <div class="list_item">
+                      <a href="#" class="title_wrap">
+                        <h3 class="item_title">Globe</h3>
+                        <div class="line_box">
+                          <img src="./images/arrow.svg" alt="arrow" />
+                        </div>
+                      </a>
+                    </div>
+                    <div class="list_item">
+                      <a href="#" class="title_wrap">
+                        <h3 class="item_title">Books</h3>
+                        <div class="line_box">
+                          <img src="./images/arrow.svg" alt="arrow" />
+                        </div>
+                      </a>
+                    </div>
+                    <div class="list_item">
+                      <a href="#" class="title_wrap">
+                        <h3 class="item_title">People</h3>
+                        <div class="line_box">
+                          <img src="./images/arrow.svg" alt="arrow" />
+                        </div>
+                      </a>
+                    </div>
+                    <div class="list_item">
+                      <a href="#" class="title_wrap">
+                        <h3 class="item_title">Music</h3>
+                        <div class="line_box">
+                          <img src="./images/arrow.svg" alt="arrow" />
+                        </div>
+                      </a>
+                    </div>
+                    <div class="list_item">
+                      <a href="#" class="title_wrap">
+                        <h3 class="item_title">letters</h3>
+                        <div class="line_box">
+                          <img src="./images/arrow.svg" alt="arrow" />
+                        </div>
+                      </a>
+                    </div>
+                    <div class="list_item">
+                      <a href="#" class="title_wrap">
+                        <h3 class="item_title">Polygonal</h3>
+                        <div class="line_box">
+                          <img src="./images/arrow.svg" alt="arrow" />
+                        </div>
+                      </a>
+                    </div>
+                    <div class="list_item">
+                      <a href="#" class="title_wrap">
+                        <h3 class="item_title">Nature</h3>
+                        <div class="line_box">
+                          <img src="./images/arrow.svg" alt="arrow" />
+                        </div>
+                      </a>
+                    </div>
+                    <div class="list_item">
+                      <a href="#" class="title_wrap">
+                        <h3 class="item_title">Family</h3>
+                        <div class="line_box">
+                          <img src="./images/arrow.svg" alt="arrow" />
+                        </div>
+                      </a>
+                    </div>
+                    <div class="list_item">
+                      <a href="#" class="title_wrap">
+                        <h3 class="item_title">Heart</h3>
+                        <div class="line_box">
+                          <img src="./images/arrow.svg" alt="arrow" />
+                        </div>
+                      </a>
+                    </div>
+                    <div class="list_item">
+                      <a href="#" class="title_wrap">
+                        <h3 class="item_title">Sport</h3>
+                        <div class="line_box">
+                          <img src="./images/arrow.svg" alt="arrow" />
+                        </div>
+                      </a>
+                    </div>
+                    <div class="list_item">
+                      <a href="#" class="title_wrap">
+                        <h3 class="item_title">Religion</h3>
+                        <div class="line_box">
+                          <img src="./images/arrow.svg" alt="arrow" />
+                        </div>
+                      </a>
+                    </div>
+                    <div class="list_item">
+                      <a href="#" class="title_wrap">
+                        <h3 class="item_title">Rings</h3>
+                        <div class="line_box">
+                          <img src="./images/arrow.svg" alt="arrow" />
+                        </div>
+                      </a>
+                    </div>
+                    <div class="list_item">
+                      <a href="#" class="title_wrap">
+                        <h3 class="item_title">Stela</h3>
+                        <div class="line_box">
+                          <img src="./images/arrow.svg" alt="arrow" />
+                        </div>
+                      </a>
+                    </div>
+                    <div class="list_item">
+                      <a href="#" class="title_wrap">
+                        <h3 class="item_title">Fruits - Vegs - Berries</h3>
+                        <div class="line_box">
+                          <img src="./images/arrow.svg" alt="arrow" />
+                        </div>
+                      </a>
+                    </div>
+                    <div class="list_item">
+                      <a href="#" class="title_wrap">
+                        <h3 class="item_title">Fantasy & Comics</h3>
+                        <div class="line_box">
+                          <img src="./images/arrow.svg" alt="arrow" />
+                        </div>
+                      </a>
+                    </div>
+                    <div class="list_item">
+                      <a href="#" class="title_wrap">
+                        <h3 class="item_title">Other</h3>
+                        <div class="line_box">
+                          <img src="./images/arrow.svg" alt="arrow" />
+                        </div>
+                      </a>
+                    </div>
+                    <div class="list_item">
+                      <a href="#" class="title_wrap">
+                        <h3 class="item_title">SEE ALL</h3>
+                        <div class="line_box">
+                          <img src="./images/arrow.svg" alt="arrow" />
+                        </div>
+                      </a>
+                    </div>
+                  </div>
+                  <a href="#" class="list_btn">Show</a>
+                </div>
+              </div>
+            </li>
+            <li class="menu_item">
+              <a class="menu_link" href="#contact">Contact</a>
+            </li>
+          </ul>
+        </nav>
+        <button class="cart">
+          <img src="./images/cart.svg" alt="cart" />
+        </button>
+        <div class="burger_menu">
+          <span></span>
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
