--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -17,8 +17,8 @@ $Lora: 'Lora', $base-font-sans-serif;
 $rem-base: 16px;
 
 // Body
-$base-text-color: $black !default;
-$base-background-color: $white !default;
+$base-text-color: $white !default;
+$base-background-color: $black !default;
 $font-size-base: 16px !default;
 $line-height-base: 1.2 !default;
 $base-font-family: $base-font-sans-serif !default;
