--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -1,1 +1,107 @@
-#footer {}
+#footer {
+    padding: 15px 0;
+
+    .footer_top {
+        @include adaptive-value("padding-bottom", 75, 30, 1);
+        position: relative;
+    }
+
+    .menu_list {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 25px;
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: max-content;
+
+        @include media('<tablet') {
+            position: static;
+            margin: 0 auto;
+            margin-bottom: 60px;
+        }
+
+        @include media('<phone') {
+            width: 100%;
+        }
+    }
+
+    .menu_link {
+        color: $white;
+        font-family: "Neue Haas Grotesk Display Pro";
+        font-size: 16px;
+        font-weight: 600;
+        text-transform: uppercase;
+        position: relative;
+
+        @include media('>fullscreen') {
+            font-size: 1.5vw;
+        }
+
+        &:hover {
+            &::after {
+                transition: all .3s ease 0s;
+                width: 100%;
+            }
+        }
+
+        &::after {
+            content: '';
+            position: absolute;
+            bottom: -3px;
+            left: 0;
+            width: 0;
+            height: 1px;
+            background-color: $white;
+            transition: all .3s ease 0s;
+        }
+    }
+
+    .footer_img_desktop {
+        @include media('<tablet') {
+            display: none;
+        }
+    }
+
+    .footer_img_phone {
+        display: none;
+
+        @include media('<tablet') {
+            display: block;
+        }
+    }
+
+    .footer_bot {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 15px;
+        border-top: 1px solid rgba(255, 255, 255, 0.2);
+        padding-top: 20px;
+
+        @include media('<tablet') {
+            flex-direction: column-reverse;
+        }
+    }
+
+    .copyright {
+        color: rgba(255, 255, 255, 0.8);
+        font-family: "Neue Haas Grotesk Display Pro";
+        @include adaptive-value("font-size", 16, 14, 1);
+        font-weight: 500;
+        text-transform: uppercase;
+
+        @include media('>fullscreen') {
+            font-size: 1vw;
+        }
+    }
+
+    .creator {
+        max-width: 191px;
+
+        @include media('>fullscreen') {
+            max-width: 15vw;
+        }
+    }
+}
