--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -1,1 +1,460 @@
-#header {}
+#header {
+    padding: 25px 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 3;
+
+    .content,
+    .menu_list,
+    .menu_wrap {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 25px;
+    }
+
+    .logo {
+        max-width: 215px;
+        width: 100%;
+        position: relative;
+        z-index: 4;
+        display: flex;
+        align-items: center;
+        gap: 7px;
+
+        @include media('>fullscreen') {
+            max-width: 15vw;
+            gap: 15px;
+        }
+
+        @include media('<desktop') {
+            max-width: 150px;
+        }
+    }
+
+    .logo_img {
+        @include adaptive-value("width", 36, 24, 1);
+        @include adaptive-value("height", 36, 24, 1);
+
+        @include media('>fullscreen') {
+            width: 3.3vw;
+            height: auto;
+        }
+    }
+
+    .logo_name {
+        max-width: 170px;
+
+        @include media('>fullscreen') {
+            max-width: 100%;
+        }
+
+        @include media('<phone') {
+            display: none;
+        }
+    }
+
+    .menu {
+        @include media('<desktop') {
+            position: fixed;
+            top: 0;
+            right: -100%;
+            transition: all .3s ease 0s;
+            width: 75%;
+            height: 100dvh;
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            padding: 60px 20px 30px 20px;
+            z-index: 3;
+            background-color: $black;
+        }
+
+        @include media('<phone') {
+            width: 100%;
+        }
+    }
+
+    .menu_active {
+        right: 0;
+        transition: all .3s ease 0s;
+    }
+
+    .menu_list {
+        @include media('<desktop') {
+            flex-direction: column;
+            align-items: flex-start;
+            width: 100%;
+        }
+    }
+
+    .menu_item {
+        width: 100%;
+        position: relative;
+
+        @include media('<desktop') {
+            padding-bottom: 25px;
+        }
+
+
+        &::after {
+            content: '';
+            position: absolute;
+            bottom: -3px;
+            left: 0;
+            width: 0;
+            height: 1px;
+            background-color: #fff;
+            transition: all .3s ease 0s;
+
+            @include media('<desktop') {
+                width: 100%;
+                background-color: rgba(255, 255, 255, 0.3);
+            }
+        }
+    }
+
+    .menu_link {
+        color: $white;
+        font-family: "Neue Haas Grotesk Display Pro";
+        font-size: 16px;
+        font-weight: 600;
+        text-transform: uppercase;
+        position: relative;
+        width: 100%;
+        display: inline-block;
+        white-space: nowrap;
+
+        @include media('>fullscreen') {
+            font-size: 1.5vw;
+        }
+
+        @include media('<desktop') {
+            font-size: 32px;
+        }
+    }
+
+    .menu_link_active {
+        &::after {
+            content: '';
+            position: absolute;
+            bottom: -3px;
+            left: 0;
+            width: 100%;
+            height: 1px;
+            background-color: #fff;
+            transition: all .3s ease 0s;
+        }
+    }
+
+    .modal_link {
+        width: 100%;
+        position: relative;
+
+        @include media('>desktop') {
+            &:hover {
+                .collection_list {
+                    transform: scale(1) translateX(-50%);
+                    transition: all .3s ease 0s;
+                }
+            }
+        }
+
+        .link {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+    }
+
+    .arrow {
+        width: 24px;
+        height: 24px;
+        transform: rotate(180deg);
+        display: none;
+
+        @include media('<desktop') {
+            display: block;
+        }
+    }
+
+    .cart {
+        @include adaptive-value("width", 32, 24, 1);
+        @include adaptive-value("height", 32, 24, 1);
+        background-color: transparent;
+        border: none;
+        padding: 0;
+        transition: all .3s ease 0s;
+        position: relative;
+        z-index: 3;
+
+        @include media('>fullscreen') {
+            width: 2vw;
+            height: auto;
+        }
+
+        &:hover {
+            transform: rotateY(180deg);
+            transition: all .3s ease 0s;
+        }
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+    .burger_menu {
+        display: none;
+        position: relative;
+        width: 22px;
+        height: 16px;
+        z-index: 3;
+
+        @include media('<desktop') {
+            display: block;
+        }
+
+        &::before,
+        &::after {
+            content: '';
+            width: 100%;
+            height: 1px;
+            position: absolute;
+            left: 0;
+            background-color: $white;
+            transition: all .3s ease 0s;
+        }
+
+        &::after {
+            bottom: 0;
+        }
+
+        &::before {
+            top: 0;
+        }
+
+        span {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 100%;
+            height: 1px;
+            background-color: $white;
+            transition: all .3s ease 0s;
+        }
+
+        @include media('<desktop') {
+            display: block;
+        }
+    }
+
+    .burger_active {
+        &::after {
+            bottom: 9px;
+            transform: rotate(45deg);
+            transition: all .3s ease 0s;
+        }
+
+        &::before {
+            top: 6px;
+            transform: rotate(-45deg);
+            transition: all .3s ease 0s;
+        }
+
+        span {
+            opacity: 0;
+            width: 0;
+            transition: all .3s ease 0s;
+        }
+    }
+
+    .collection_list {
+        position: fixed;
+        top: 10%;
+        left: 50%;
+        // max-width: 1390px;
+        width: calc(100% - 30px);
+        margin: 0 auto;
+        z-index: 5;
+        transition: all .3s ease 0s;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        background: rgba(0, 0, 0, 0.46);
+        backdrop-filter: blur(24px);
+        transform: scale(0);
+
+        @include media('<desktop') {
+            max-width: 100%;
+            width: 100%;
+            top: 0;
+            left: 0;
+            height: 100dvh;
+            flex-direction: column;
+            align-items: flex-start;
+            background: $black;
+            padding: 80px 0 30px 0;
+        }
+
+        &::before {
+            content: '';
+            position: absolute;
+            top: -55px;
+            left: 0;
+            width: 100%;
+            height: 100px;
+            z-index: 1;
+
+            @include media('<desktop') {
+                display: none;
+            }
+        }
+    }
+
+    .list_active {
+        transform: scale(1);
+        transition: all .3s ease 0s;
+    }
+
+    .collection_img {
+        max-width: 476px;
+        width: 100%;
+
+        @include media('>fullscreen') {
+            max-width: 35%;
+        }
+
+        @include media('<desktop') {
+            display: none;
+        }
+    }
+
+    .collection_title_wrap {
+        align-items: center;
+        gap: 10px;
+        margin-bottom: 25px;
+        display: none;
+        padding: 0 20px;
+
+        @include media('<desktop') {
+            display: flex;
+        }
+    }
+
+    .collection_title {
+        color: $white;
+        font-family: "Neue Haas Grotesk Display Pro";
+        font-size: 32px;
+        font-weight: 600;
+        text-transform: uppercase;
+    }
+
+    .list_wrap {
+        max-width: 710px;
+        width: 100%;
+
+        @include media('>fullscreen') {
+            max-width: 60%;
+        }
+
+        @include media('<desktop') {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            gap: 35px;
+            max-width: 100%;
+            overflow: auto;
+        }
+    }
+
+    .list {
+        padding: 0 20px;
+        column-count: 4;
+
+        @include media('<desktop') {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            width: 100%;
+            overflow: auto;
+        }
+    }
+
+    .list_item {
+        margin-bottom: 15px;
+        position: relative;
+        width: max-content;
+
+        @include media('<desktop') {
+            margin: 0;
+            width: 100%;
+            padding-bottom: 15px;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+        }
+    }
+
+    .title_wrap {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 15px;
+
+        .line_box {
+            width: 16px;
+            height: 16px;
+            transform: rotate(180deg);
+        }
+    }
+
+    .item_title {
+        color: $white;
+        font-family: "Neue Haas Grotesk Display Pro";
+        font-size: 14px;
+        font-weight: 500;
+        text-transform: uppercase;
+
+        @include media('>fullscreen') {
+            font-size: 1vw;
+        }
+    }
+
+    .line_box {
+        display: none;
+        position: relative;
+        width: 32px;
+        height: 32px;
+
+        @include media('<desktop') {
+            display: block;
+        }
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+    .list_btn {
+        color: $black;
+        font-family: "Neue Haas Grotesk Display Pro";
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 600;
+        padding: 18px;
+        text-transform: uppercase;
+        width: 100%;
+        background-color: $white;
+        display: inline-block;
+        text-align: center;
+        width: calc(100% - 40px);
+        margin: 0 auto;
+        display: none;
+
+        @include media('<desktop') {
+            display: block;
+        }
+    }
+}
