--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -5,7 +5,7 @@
         <nav class="menu">
           <ul class="menu_list">
             <li class="menu_item">
-              <a class="menu_link" href="#">Collection</a>
+              <a class="menu_link" href="collection.html">Collection</a>
             </li>
             <li class="menu_item">
               <a class="menu_link" href="about_us.html">About Us</a>
