--- a/src/styles/layout/_common.scss
+++ b/src/styles/layout/_common.scss
@@ -268,6 +268,14 @@ html {
     overflow: hidden;
     text-align: center;
 
+    .container {
+        padding: 0;
+
+        @include media('<phone') {
+            padding: 0 15px;
+        }
+    }
+
     .top_shadow {
         content: '';
         position: absolute;
@@ -451,19 +459,19 @@ html {
         &::before {
             content: '';
             position: absolute;
-            top: -35%;
+            top: 0;
             width: 100%;
             height: 100%;
             border: 1px solid #FFF;
             border-radius: 50%;
             animation: pulse 3s linear infinite;
-            width: 274px;
+            @include adaptive-value("width", 274, 224, 1);
             height: 244px;
             transition: all .3s ease 0s;
 
             @include media('>fullscreen') {
-                width: 17vw;
-                height: 17vw;
+                width: 20vw;
+                height: 20vw;
             }
         }
 
@@ -729,7 +737,7 @@ html {
         transition: all .3s ease 0s;
 
         @include media('>fullscreen') {
-            font-size: 2vw;
+            font-size: 1.3vw;
             width: 12vw;
             height: 5vw;
         }
@@ -806,6 +814,10 @@ html {
             height: 20%;
             background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, #000 100%);
             z-index: 1;
+
+            @include media('<phone') {
+                height: 70%;
+            }
         }
 
         .title {
@@ -822,10 +834,55 @@ html {
             }
         }
 
+        .stroke_wrap_1 {
 
-        .stroke_2,
-        .stroke_4 {
+            @include media('<650px') {
+                display: flex;
+                flex-direction: column;
+            }
+
+            .item_2 {
+
+                @include media('<650px') {
+                    text-align: left;
+                }
+            }
+        }
+
+        .item {
+
+            @include media('<phone') {
+                display: inline-block;
+                width: 100%;
+            }
+        }
+
+        .stroke_wrap_4 {
             @include adaptive-value("margin-right", 63, 35, 1);
+
+            @include media('<650px') {
+                margin: 0;
+            }
+
+            .item_1 {
+                text-align: left;
+            }
+
+            .item_2 {
+                text-align: right;
+            }
+        }
+
+
+        .stroke_2 {
+            @include adaptive-value("margin-right", 63, 35, 1);
+
+            @include media('<phone') {
+                .font {
+                    display: inline-block;
+                    margin-bottom: 15px;
+                }
+            }
         }
     }
 
@@ -845,10 +902,12 @@ html {
         display: flex;
         align-items: flex-end;
         @include adaptive-value("padding-top", 20, 120, 1);
+        overflow: hidden;
 
         @include media('<desktop') {
             flex-direction: column;
             height: auto;
+            align-items: center;
         }
 
         .title {
@@ -858,12 +917,45 @@ html {
             flex-direction: column;
         }
 
+        .stroke_1 {
+
+            @include media('<phone') {
+                margin-bottom: 8px;
+                text-align: end
+            }
+        }
+
         .stroke_2 {
             @include adaptive-value("margin-left", 160, 10, 1);
+
+            @include media('<phone') {
+                text-align: start;
+                margin-bottom: 8px;
+            }
         }
 
         .stroke_3 {
             @include adaptive-value("margin-left", 80, 10, 1);
+
+
+            @include media('<phone') {
+                text-align: center;
+                margin-bottom: 8px;
+            }
+        }
+
+        .stroke_4 {
+            br {
+                display: none;
+            }
+
+            @include media('<phone') {
+                text-align: end;
+
+                br {
+                    display: block;
+                }
+            }
         }
     }
 
@@ -884,6 +976,7 @@ html {
         @include media('<desktop') {
             position: static;
             margin-bottom: 35px;
+            min-width: 800px;
         }
     }
 
@@ -940,6 +1033,14 @@ html {
                 font-size: 7vw;
             }
 
+            @include media('<phone') {
+                span {
+                    &:nth-child(odd) {
+                        text-align: end;
+                    }
+                }
+            }
+
             .font {
                 @include adaptive-value("font-size", 120, 52, 1);
 
@@ -947,6 +1048,7 @@ html {
                     font-size: 8vw;
                 }
             }
+
         }
 
         .stroke_3 {
@@ -988,6 +1090,661 @@ html {
                 width: 100%;
                 height: 100%;
             }
+        }
+    }
+}
+
+
+
+.collection {
+    @include adaptive-value("padding-top", 215, 70, 1);
+    @include adaptive-value("padding-bottom", 215, 80, 1);
+
+    .title {
+        color: $white;
+        font-family: "Neue Haas Grotesk Display Pro";
+        font-size: 32px;
+        font-weight: 600;
+        text-transform: uppercase;
+        margin-bottom: 15px;
+        display: none;
+
+        @include media('<desktop') {
+            display: block;
+        }
+    }
+
+    .content {
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+        gap: 40px;
+
+        @include media('<desktop') {
+            flex-direction: column;
+            gap: 15px;
+        }
+    }
+
+    .filter_wrap {
+        height: 100%;
+        width: 24%;
+        padding-right: 30px;
+        border-right: 1px solid rgba(255, 255, 255, 0.3);
+
+        @include media('<desktop') {
+            padding: 0;
+            border: none;
+            width: 100%;
+        }
+    }
+
+    .filter_title {
+        margin-bottom: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 20px;
+
+        @include media('<desktop') {
+            margin-bottom: 0;
+            padding: 15px 15px 15px 20px;
+            border: 1px solid $white;
+        }
+
+        p {
+            color: $white;
+            font-family: "Neue Haas Grotesk Display Pro";
+            font-size: 20px;
+            font-weight: 600;
+            text-transform: uppercase;
+
+            @include media('>fullscreen') {
+                font-size: 1.7vw;
+            }
+        }
+    }
+
+    .filter_img {
+        width: 24px;
+        height: 24px;
+        display: none;
+
+        @include media('<desktop') {
+            display: block;
+        }
+    }
+
+    .filters {
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
+
+        @include media('<desktop') {
+            position: fixed;
+            top: 0;
+            left: 0;
+            transform: scale(0);
+            height: 0;
+            width: 100%;
+            transition: all .3s ease 0s;
+            background-color: $black;
+            z-index: 2;
+            padding: 80px 20px 30px 20px;
+        }
+    }
+
+    .filters_active {
+        transform: scale(1);
+        height: 100dvh;
+        transition: all .3s ease 0s;
+    }
+
+    .filters_title_wrap {
+        display: none;
+        align-items: center;
+        gap: 10px;
+
+        @include media('<desktop') {
+            display: flex;
+        }
+    }
+
+    .line_box {
+        width: 20px;
+        height: 20px;
+    }
+
+    .filter_title_phone {
+        color: $white;
+        font-family: "Neue Haas Grotesk Display Pro";
+        font-size: 16px;
+        font-weight: 600;
+        text-transform: uppercase;
+    }
+
+    .filter_body {
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
+        overflow: auto;
+
+        &::-webkit-scrollbar {
+            display: none;
+        }
+
+        @include media('<desktop') {
+            flex: 1 1 auto;
+        }
+    }
+
+    .input_wrap,
+    .all_filter {
+        padding: 10px 5px;
+
+        @include media('<desktop') {
+            padding: 0 0 15px 0;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+        }
+
+        @include media('>desktop') {
+            &:hover {
+                transition: all .3s ease 0s;
+                background-color: $white;
+
+                .filter_name {
+                    color: $black;
+                    transition: all .3s ease 0s;
+                }
+
+                .filter:checked+.custom-checkbox {
+                    border: 1px solid $black;
+                    transition: all .3s ease 0s;
+
+                    &::after {
+                        background-color: $black;
+                        transition: all .3s ease 0s;
+                    }
+                }
+            }
+        }
+    }
+
+    .filter_name {
+        color: $white;
+        font-family: "Neue Haas Grotesk Display Pro";
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 120%;
+        text-transform: uppercase;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        transition: all .3s ease 0s;
+
+        @include media('>fullscreen') {
+            font-size: 1.3vw;
+        }
+    }
+
+    .filter {
+        position: absolute;
+        opacity: 0;
+    }
+
+    .custom-checkbox {
+        width: 32px;
+        height: 32px;
+        cursor: pointer;
+        position: relative;
+        display: inline-block;
+        background-color: transparent;
+        color: transparent;
+        position: relative;
+        transition: all .3s ease 0s;
+
+        @include media('<desktop') {
+            width: 24px;
+            height: 24px;
+        }
+
+        &::after,
+        &::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 55%;
+            height: 1px;
+            background-color: $black;
+            z-index: 1;
+            transition: all .3s ease 0s;
+
+            @include media('<desktop') {
+                background-color: $white;
+            }
+        }
+
+        &::before {
+            transform: translate(-50%, -50%) rotate(90deg);
+        }
+
+        &::after {
+            transform: translate(-50%, -50%);
+        }
+    }
+
+    .filter:checked+.custom-checkbox {
+        border: 1px solid $white;
+        transition: all .3s ease 0s;
+
+        &::before {
+            display: none;
+
+        }
+
+        &::after {
+            background-color: $white;
+            transition: all .3s ease 0s;
+        }
+    }
+
+    .filters_btn {
+        width: 100%;
+        padding: 18px 39px;
+        background-color: $white;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        color: $black;
+        font-family: "Neue Haas Grotesk Display Pro";
+        font-size: 14px;
+        font-weight: 600;
+        text-transform: uppercase;
+        display: none;
+
+        @include media('<desktop') {
+            display: flex;
+        }
+    }
+
+    .collection_content {
+        width: 70%;
+
+        @include media('<desktop') {
+            width: 100%;
+        }
+    }
+
+    .item {
+        display: grid;
+        grid-template: 1fr / repeat(auto-fit, minmax(250px, 1fr));
+        gap: 40px;
+        @include adaptive-value("gap", 40, 10, 1);
+        @include adaptive-value(" margin-bottom", 40, 10, 1);
+
+        @include media('<phone') {
+            grid-template: 1fr / repeat(auto-fit, minmax(160px, 1fr));
+        }
+    }
+
+    .card {
+        background-color: $white;
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
+        transition: all .5s ease 0s;
+        position: relative;
+        text-align: start;
+
+        @include media('<phone') {
+            padding: 0;
+        }
+
+
+        &:hover {
+            background-color: #1B1B1B;
+            transition: all .5s ease 0s;
+
+            .card_title,
+            .category,
+            .price {
+                color: $white;
+                transition: all .5s ease 0s;
+            }
+        }
+    }
+
+    .card_img {
+        @include adaptive-value("height", 280, 160, 1);
+        width: 100%;
+        margin-bottom: 20px;
+        position: relative;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+
+    .permalink {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+    }
+
+    .card_title {
+        color: $black;
+        font-family: "Neue Haas Grotesk Display Pro";
+        @include adaptive-value("font-size", 24, 16, 1);
+        font-weight: 600;
+        text-transform: uppercase;
+        @include adaptive-value("margin-bottom", 60, 25, 1);
+        flex: 1 1 auto;
+        transition: all .5s ease 0s;
+
+        @include media('<phone') {
+            padding: 0 8px;
+        }
+    }
+
+    .card_info {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 15px;
+
+        @include media('<phone') {
+            flex-direction: column;
+            gap: 15px;
+            align-items: flex-start;
+            padding: 0 8px 10px 8px;
+        }
+    }
+
+    .category,
+    .price {
+        color: $black;
+        font-family: "Neue Haas Grotesk Display Pro";
+        @include adaptive-value("font-size", 16, 14, 1);
+        font-weight: 500;
+        text-transform: uppercase;
+        transition: all .5s ease 0s;
+    }
+
+    .category {
+        text-decoration: underline
+    }
+}
+
+.item_descr {
+    @include adaptive-value("padding-top", 130, 100, 1);
+    @include adaptive-value("padding-bottom", 55, 30, 1);
+    overflow: hidden;
+
+    .content {
+        display: flex;
+        @include adaptive-value("gap", 80, 30, 1);
+        padding: 35px;
+        border: 1px solid rgba(255, 255, 255, 0.3);
+
+        @include media('<tablet') {
+            padding: 0;
+            flex-direction: column;
+            border: none;
+        }
+    }
+
+    .slider_wrap {
+        width: 45vw;
+        display: flex;
+        align-items: flex-start;
+        gap: 20px;
+
+        @include media('<tablet') {
+            width: 100%;
+        }
+    }
+
+    .keen-slider {
+        width: 37vw !important;
+        height: 530px;
+        @include adaptive-value("height", 530, 335, 1);
+
+        @include media('<tablet') {
+            width: 100vw !important;
+        }
+
+        @include media('>fullscreen') {
+            height: 35vw;
+            width: 35vw !important;
+        }
+
+        .keen-slider__slide {
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+
+
+    }
+
+    .navigation-wrapper {
+        position: relative;
+    }
+
+    .dots {
+        position: absolute;
+        display: none;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+        bottom: 30px;
+        z-index: 2;
+        width: 100vw;
+        height: 40px;
+
+        @include media('<tablet') {
+            display: flex;
+        }
+    }
+
+    .dot {
+        width: 12px;
+        height: 12px;
+        border-radius: 50%;
+        border: 1px solid $white;
+        background-color: $white;
+        transition: all .3s ease 0s;
+    }
+
+    .dot--active {
+        background-color: transparent;
+        transition: all .3s ease 0s;
+    }
+
+    .thumbnail {
+
+        @include media('<tablet') {
+            display: none;
+        }
+
+        .keen-slider__slide {
+            width: 95px !important;
+            height: 95px !important;
+            cursor: pointer;
+
+            @include media('>fullscreen') {
+                height: 8vw !important;
+                width: 8vw !important;
+            }
+
+            @include media('<desktop') {
+                width: 75px !important;
+                height: 75px !important;
+            }
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+    }
+
+    .description {
+        width: 45vw;
+        display: flex;
+        flex-direction: column;
+        min-height: 100%;
+
+        @include media('<tablet') {
+            width: 100%;
+        }
+    }
+
+    .top_descr {
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+        gap: 20px;
+        @include adaptive-value("margin-bottom", 40, 20, 1);
+    }
+
+    .title_wrap {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+    }
+
+    .title,
+    .price {
+        color: $white;
+        font-family: "Neue Haas Grotesk Display Pro";
+        @include adaptive-value("font-size", 24, 20, 1);
+        font-weight: 600;
+        text-transform: uppercase;
+
+        @include media('>fullscreen') {
+            font-size: 1.7vw;
+        }
+    }
+
+    .price {
+        font-weight: 500;
+    }
+
+    .faq_page_content {
+        flex: 1 1 auto;
+    }
+
+    .material,
+    .tab_title {
+        color: $white;
+        font-family: "Neue Haas Grotesk Display Pro";
+        font-size: 14px;
+        font-weight: 500;
+        text-transform: uppercase;
+
+        @include media('>fullscreen') {
+            font-size: 1.5vw;
+        }
+    }
+
+    .tab_title {
+        position: relative;
+        z-index: -1;
+    }
+
+    .tab_title_wrap {
+        padding-bottom: 12px;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+        margin-bottom: 20px;
+    }
+
+    .title_body {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 25px;
+        cursor: pointer;
+    }
+
+    .open_status {
+        position: relative;
+        width: 11px;
+        height: 11px;
+        z-index: -1;
+
+        &::before,
+        &::after {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 100%;
+            height: 1px;
+            background-color: $white;
+        }
+
+        &::after {
+            transform: translate(-50%, -50%);
+        }
+
+        &::before {
+            transform: translate(-50%, -50%) rotate(90deg);
+        }
+    }
+
+    .tab_content {
+        color: rgba(255, 255, 255, 0.7);
+        font-family: "Neue Haas Grotesk Display Pro";
+        font-size: 16px;
+        font-weight: 500;
+        height: 0;
+        opacity: 0;
+        visibility: hidden;
+        transition: all .3s ease 0s;
+
+
+        @include media('>fullscreen') {
+            font-size: 1.4vw;
+        }
+    }
+
+    .show {
+        @include adaptive-value("margin-bottom", 40, 30, 1);
+        height: auto;
+        opacity: 1;
+        visibility: visible;
+        transition: all .3s ease 0s;
+    }
+
+    .item_btn {
+        color: #000;
+        font-family: "Neue Haas Grotesk Display Pro";
+        font-size: 14px;
+        font-weight: 600;
+        line-height: 120%;
+        text-transform: uppercase;
+        background-color: $white;
+        padding: 18px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 163px;
+
+        @include media('>fullscreen') {
+            width: 11vw;
+            height: 4vw;
+            font-size: 1.5vw;
         }
     }
 }
