--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -126,6 +126,7 @@
         width: 100%;
         display: inline-block;
         white-space: nowrap;
+        cursor: pointer;
 
         @include media('>fullscreen') {
             font-size: 1.5vw;
@@ -434,27 +435,6 @@
         img {
             width: 100%;
             height: 100%;
-        }
-    }
-
-    .list_btn {
-        color: $black;
-        font-family: "Neue Haas Grotesk Display Pro";
-        font-size: 14px;
-        font-style: normal;
-        font-weight: 600;
-        padding: 18px;
-        text-transform: uppercase;
-        width: 100%;
-        background-color: $white;
-        display: inline-block;
-        text-align: center;
-        width: calc(100% - 40px);
-        margin: 0 auto;
-        display: none;
-
-        @include media('<desktop') {
-            display: block;
         }
     }
 }
