--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -2,8 +2,8 @@
   <div class="container">
     <div class="content">
       <a href="index.html" class="logo">
-        <img class="logo_img" src="./images/logo.webp" alt="logo">
-        <img class="logo_name" src="./images/logo_name.webp" alt="logo">
+        <img class="logo_img" src="./images/logo.webp" alt="logo" />
+        <img class="logo_name" src="./images/logo_name.webp" alt="logo" />
       </a>
       <div class="menu_wrap">
         <nav class="menu" id="menu">
@@ -12,10 +12,10 @@
               <a class="menu_link" href="about_us.html">About Us</a>
             </li>
             <li class="menu_item modal_link">
-              <a class="menu_link link" href="#"
-                >Collection
+              <p class="menu_link link">
+                Collection
                 <img class="arrow" src="./images/arrow.svg" alt="arrow" />
-              </a>
+              </p>
               <div class="collection_list">
                 <div class="collection_title_wrap">
                   <div class="line_box back_item">
@@ -29,7 +29,7 @@
                 <div class="list_wrap">
                   <div class="list">
                     <div class="list_item">
-                      <a href="#" class="title_wrap">
+                      <a href="collection.html" class="title_wrap">
                         <h3 class="item_title">All Products</h3>
                         <div class="line_box">
                           <img src="./images/arrow.svg" alt="arrow" />
@@ -205,7 +205,6 @@
                       </a>
                     </div>
                   </div>
-                  <a href="#" class="list_btn">Show</a>
                 </div>
               </div>
             </li>
