--- a/src/styles/layout/_common.scss
+++ b/src/styles/layout/_common.scss
@@ -1252,7 +1252,9 @@ html {
                 transition: all .3s ease 0s;
                 background-color: $white;
 
-                .filter_name {
+                .name,
+                .count,
+                .name_wrap {
                     color: $black;
                     transition: all .3s ease 0s;
                 }
@@ -1270,22 +1272,41 @@ html {
         }
     }
 
+    .all_filter{
+        cursor: pointer;
+    }
+
+    .name_wrap {
+        display: flex;
+        align-items: center;
+    }
+
     .filter_name {
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        transition: all .3s ease 0s;
+    }
+
+    .name,
+    .count,
+    .name_wrap {
         color: $white;
         font-family: "Neue Haas Grotesk Display Pro";
         font-size: 16px;
         font-weight: 500;
         line-height: 120%;
         text-transform: uppercase;
-        cursor: pointer;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        transition: all .3s ease 0s;
+
 
         @include media('>fullscreen') {
             font-size: 1.3vw;
         }
+    }
+
+    .name {
+        margin-right: 5px;
     }
 
     .filter {
@@ -1667,6 +1688,10 @@ html {
         padding-bottom: 12px;
         border-bottom: 1px solid rgba(255, 255, 255, 0.3);
         margin-bottom: 20px;
+
+        @include media('>fullscreen') {
+            margin-bottom: 40px;
+        }
     }
 
     .title_body {
